--- a/.github/workflows/testingbase64.yml
+++ b/.github/workflows/testingbase64.yml
@@ -3,10 +3,10 @@ name: testing base64 workflow
 on:
   push:
     branches:
-     - main
+     - branch_name
 
 jobs:
-
+#Calling the reusable workflow directly using "uses:" command where we are providing the input string value as test
   string_to_base64:
     uses: tusharmathur08/officialworkflows/.github/workflows/base64.yaml@base64-workflow
     with:
