--- a/.github/workflows/testingbase64.yml
+++ b/.github/workflows/testingbase64.yml
@@ -3,7 +3,7 @@ name: testing base64 workflow
 on:
   push:
     branches:
-     - branch_name
+     - main
 
 jobs:
 #Calling the reusable workflow directly using "uses:" command where we are providing the input string value as test
