--- a/.github/workflows/testingbase64.yml
+++ b/.github/workflows/testingbase64.yml
@@ -8,11 +8,12 @@ on:
 jobs:
 #Calling the reusable workflow directly using "uses:" command where we are providing the input string value as test
   string_to_base64:
+  #Need to provide the file destination here, I have provided my workflow file location for this sample worklfow
     uses: tusharmathur08/officialworkflows/.github/workflows/base64.yaml@main
     with:
        string_value: "test"
 
-  fetch_bas64:
+  fetch_base64:
     needs: string_to_base64
     runs-on: ubuntu-latest
     steps:
